--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,40 @@
         </div>
         <div class="about-text">
             <h2> About <span>Me</span></h2>
-            <p>Currently I'm the sophomer in Biomedical Engineering with minor in Computer Science Engineering in National Institute of Technology, Rourkela.
+            <p>Currently, I'm the sophomore in Biomedical Engineering with minor in Computer Science Engineering in National Institute of Technology, Rourkela.
             In my minor degree I have completed the course of Data Structures and Algorithm. I am also a passionate frontend developer with expertise in HTML, CSS, and JavaScript. With a strong foundation in C++ programming and problem-solving, I love creating interactive and user-friendly web experiences. My ultimate goal is to secure a good placement in a reputed tech company where I can contribute and grow as a developer. Always eager to learn and innovate, I believe in delivering top-notch solutions that make a difference. Let's connect and create something impactful together!
 
             </p>
             <a href="#" class="btn-box"> More About Me </a>
+        </div>
+    </section>
+    <section>
+        <div class="service" id="service">
+            <div class="container">
+                <h1 class="sub-title"> My <span>Work</span></h1>
+                <div class="service-list">
+                    <div>
+                        <i class='bx bx-code' style='color:#00eeff'  ></i>
+                        <h2> Designs </h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, et.</p>
+                         <img src="hrd.jpg" class="HRD">
+                         <img src="UN DAY.jpg" class="UN">
+                        <a href="#" class="read" > Learn more </a>
+                    </div>
+                    <div>
+                        <i class='bx bx-crop' style='color:#00eeff' ></i>
+                        <h2> Designs </h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, et.</p>
+                        <a href="#" class="read" > Learn more </a>
+                    </div>
+                    <div>
+                        <i class='bx bxl-apple' style='color:#00eeff'></i>
+                        <h2> Designs </h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, et.</p>
+                        <a href="#" class="read" > Learn more </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
