--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,11 @@
     <header class="header">
         <a href="#" class="logo"> Portfolio </a>
         <nav class="navbar">
-            <a href="#" style="--i:1" class="active"> Home </a>
-            <a href="#" style="--i:2"> About </a>
-            <a href="#" style="--i:3"> Skills </a>
-            <a href="#" style="--i:4"> Portfolio </a>
-            <a href="#" style="--i:5"> Contact </a>
+            <a href="#home" style="--i:1" class="active"> Home </a>
+            <a href="#about" style="--i:2"> About </a>
+            <a href="#skill" style="--i:3"> Skills </a>
+            <a href="#" style="--i:4"> Project </a>
+            <a href="#contact" style="--i:5"> Contact </a>
         </nav>
     </header>
     <section class="home">
@@ -33,7 +33,7 @@
                 <a href="#" style="--i:10"><i class='bx bxl-linkedin' ></i></a>
 
             </div>
-            <a href="#" class="btn-box" style="margin-top: 20px;">More About Me</a>
+            <a href="#about" class="btn-box" style="margin-top: 20px;">More About Me</a>
         </div>
         <span class="home-imgHover"></span>
     </section>
@@ -46,13 +46,13 @@
         <div class="about-text">
             <h2> About <span>Me</span></h2>
             <p>Currently, I'm the sophomore in Biomedical Engineering with minor in Computer Science Engineering in National Institute of Technology, Rourkela.
-            In my minor degree I have completed the course of Data Structures and Algorithm. I am also a passionate frontend developer with expertise in HTML, CSS, and JavaScript. With a strong foundation in C++ programming and problem-solving, I love creating interactive and user-friendly web experiences. My ultimate goal is to secure a good placement in a reputed tech company where I can contribute and grow as a developer. Always eager to learn and innovate, I believe in delivering top-notch solutions that make a difference. Let's connect and create something impactful together!
+            In my minor degree I have completed the course of Data Structures and Algorithm. I am also a passionate frontend developer with expertise in HTML, CSS, and JavaScript. With a strong foundation in C++ programming and problem-solving, I love creating interactive and user-friendly web experiences. My ultimate goal is to secure a good placement in a reputed tech company where I can contribute and grow as a developer.
 
             </p>
             <a href="#" class="btn-box"> More About Me </a>
         </div>
     </section>
-    <section>
+    <section class="ser">
         <div class="service" id="service">
             <div class="container">
                 <h1 class="sub-title"> My <span>Work</span></h1>
@@ -81,7 +81,7 @@
         </div>
     </section>
     <h1 class="sub-title"> My <span>Skills</span></h1>
-    <section>
+    <section class="skill" id="skill">
         <div class="container1" id="skills">
             <h1 class="heading1"> Technical Skills</h1>
             <div class="Technical-bars">
@@ -165,7 +165,32 @@
             </div>
             
     </section>
-    <section>
+    <section class="contact" id="contact">
+        <div class="contact_text">
+            <h2>Contact <span> Me </span></h2> 
+            <h4> Let's Work Together </h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quasi deserunt quisquam ipsam qui blanditiis repellat necessitatibus eius similique non?</p>
+            <div class="contact_list">
+                <li><i class='bx bxs-send' style='color:#00eeff' ></i>chrudra@gmail.com</li>
+                <li><i class='bx bxs-phone' style='color:#00eeff' ></i></i>+91 9319018800</li>
+            </div>
+            <div class="contact_icons">
+                <a href="#"><i class='bx bxl-facebook-circle' style='color:#00eeff' ></i></a>
+                <a href="#"><i class='bx bxl-twitter' style='color:#00eeff'></i></a>
+                <a href="#"><i class='bx bxl-instagram' style='color:#00eeff' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin' style='color:#00eeff' ></i></a>
+            </div>
+        </div>
+        <div class="contact_form">
+            <form action="">
+                <input type="name" placeholder="Enter your name" required>
+                <input type="email" placeholder="Enter your email" required>
+                <input type="" placeholder="Enter your subject" required>
+
+                <textarea name="" id="" cols="40" rows="10" placeholder="Enter your message" required></textarea>
+                <input type="submit" value="submit" class="send">
+            </form>
+        </div>
        
     </section>
 
